--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "jsdom": "0.6.5",
     "uglify-js": "1.2.2",
-    "commander": "0.5.1"
+    "commander": "0.5.1",
+    "jsmin": "*"
   },
   "repository": {
     "type": "git",
